
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion. 

----- V2.5 (in development) ----

2004-07-30, cfalonso
Fixed an error in admin panel for custom fields definition and
added custom fields in detail page for tickets and for projects.
    -zentrack_2/includes/templates/ticket_detailsBox.php
    -zentrack_2/includes/templates/editCustomsForm.php
    -zentrack_2/includes/zenTrack.class
    -zentrack_2/www/ticket.php

2004-07-29, cfalonso
  Included detail rules for behaviors
    -zentrack_2/includes/zenTrack.class 1.133
    -zentrack_2/www/admin/addBehaviorSubmit.php 1.2
    -zentrack_2/includes/templates/behaviorDetailForm.php 1.1
    -zentrack_2/www/admin/editBehaviorDetails.php 1.1

2004-07-28, cfalonso
  Started work on behaviors admin panel
    -zentrack_2/includes/zenTrack.class 1.132
    -zentrack_2/www/admin/addBehaviorSubmit.php 1.1
    -zentrack_2/includes/templates/behaviorAdd.php 1.1
    -zentrack_2/includes/templates/behaviorForm.php 1.1
    -zentrack_2/www/admin/behaviors.php 1.1
    -zentrack_2/www/admin/editBehavior.php 1.1
    -zentrack_2/www/admin/editBehaviorSubmit.php 1.1
    -zentrack_2/includes/leftAdmin.php 1.7
    -zentrack_2/includes/templates/adminMenu.php 1.9

2004-07-27, Kato
  Added fields to GROUP table
    - zentrack_2/install/UPGRADE_mssqlserver.sql 1.5
    - zentrack_2/install/UPGRADE_mysql.sql 1.11
    - zentrack_2/install/UPGRADE_oracle.sql 1.12	
  Fixed documentation error (in notes at top) for admin pages
    - zentrack_2/includes/templates/binForm.php 1.7
    - zentrack_2/includes/templates/configForm.php 1.6

2004-07-27, cfalonso
  More fixes on groups
    -zentrack_2/includes/zenTrack.class 1.129
    -zentrack_2/www/admin/editGroupDetails.php 1.4
    -zentrack_2/www/admin/editCustom.php 1.3

2004-07-26, cfalonso