@@ -7,9 +7,13 @@
 
 ----- V2.5 (in development) ----
 
+2004-08-02, cfalonso
+  Added missing file to CVS:
+    -zentrack_2/includes/templates/customGroupDetailsForm.php
+
 2004-07-30, cfalonso
-Fixed an error in admin panel for custom fields definition and
-added custom fields in detail page for tickets and for projects.
+  Fixed an error in admin panel for custom fields definition and
+  added custom fields in detail page for tickets and for projects.
     -zentrack_2/includes/templates/ticket_detailsBox.php
     -zentrack_2/includes/templates/editCustomsForm.php
     -zentrack_2/includes/zenTrack.class
